welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:13: error: ')' expected but 'else' found.
	else if (estAdo(b)) {
        ^